k8s/services/admin-portal/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-portal
  namespace: shopno-platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: admin-portal

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              name: shopno-ingress
        - namespaceSelector:
            matchLabels:
              name: shopno-platform
        - namespaceSelector:
            matchLabels:
              name: shopno-monitoring
      ports:
        - port: 3000
          protocol: TCP

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: shopno-data
        - namespaceSelector:
            matchLabels:
              name: shopno-identity
        - namespaceSelector:
            matchLabels:
              name: shopno-monitoring
        - namespaceSelector:
            matchLabels:
              name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 443
          protocol: TCP
        - port: 5432
          protocol: TCP
        - port: 6379
          protocol: TCP
        - port: 9000
          protocol: TCP

    - to:
        - namespaceSelector:
            matchLabels:
              name: shopno-payments
      ports:
        - port: 80
          protocol: TCP
